// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should have a good base config 1`] = `
Object {
  "plugins": Array [
    Array [
      "postcss-import",
      Object {
        "path": undefined,
      },
    ],
    Array [
      "postcss-mixins",
      Object {
        "mixinsDir": undefined,
      },
    ],
    "postcss-for",
    Array [
      "postcss-css-variables",
    ],
    "postcss-conditionals",
    Array [
      "postcss-cssnext",
      Object {
        "features": Object {
          "autoprefixer": Object {
            "remove": false,
          },
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "customProperties": false,
        },
      },
    ],
  ],
}
`;

exports[`should pass options.importPath to postcss-import  1`] = `
Object {
  "plugins": Array [
    Array [
      "postcss-import",
      Object {
        "path": "foo",
      },
    ],
    Array [
      "postcss-mixins",
      Object {
        "mixinsDir": undefined,
      },
    ],
    "postcss-for",
    Array [
      "postcss-css-variables",
    ],
    "postcss-conditionals",
    Array [
      "postcss-cssnext",
      Object {
        "features": Object {
          "autoprefixer": Object {
            "remove": false,
          },
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "customProperties": false,
        },
      },
    ],
  ],
}
`;

exports[`should pass options.mixinsPath to postcss-mixins  1`] = `
Object {
  "plugins": Array [
    Array [
      "postcss-import",
      Object {
        "path": undefined,
      },
    ],
    Array [
      "postcss-mixins",
      Object {
        "mixinsDir": "foo",
      },
    ],
    "postcss-for",
    Array [
      "postcss-css-variables",
    ],
    "postcss-conditionals",
    Array [
      "postcss-cssnext",
      Object {
        "features": Object {
          "autoprefixer": Object {
            "remove": false,
          },
          "browsers": Array [
            "extends browserslist-config-google",
          ],
          "customProperties": false,
        },
      },
    ],
  ],
}
`;
